--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/msic.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
@@ -40,6 +41,7 @@
 .idea/modules
 *.iml
 *.ipr
+.idea/
 
 # CMake
 cmake-build-*/
